# llm-dashboard

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  docker-compose.yml
.trunk/: trunk.yaml
backend/: .flake8  Dockerfile  alembic.ini  mypy.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2023_09_10_1508-7adc376a1569_initial_migration.py
backend/app/: __about__.py  __init__.py  db.py  enums.py  main.py  settings.py
backend/app/models/: __init__.py  base.py  event.py  message.py  organization.py  role.py  thread.py  user.py
backend/app/routers/: __init__.py
backend/app/routers/messages/: index.py  schemas.py
backend/app/routers/organizations/: index.py
backend/app/routers/threads/: index.py  schemas.py
backend/app/routers/users/: index.py  schemas.py
